ggplot2 1.0.1
----------------------------------------------------------------

* Add `position_nudge()` for slightly off setting labels (or other geoms)
  from their corresponding points (#1109).

* All defunct functions and arguments have been removed.

* `stat_bin()` now defaults to using counts instead of proportions.
  `geom_count()` provides a convenient alias.

* `scale_size()` now maps values to _area_, not radius. Use `scale_radius()`
  if you want the old behaviour (not recommended, except perhaps for lines).

* `ggplot()` now captures the parent frame to use for evaluation,
  rather than always defaulting to the global environment. This should
  make ggplot more suitable to use in more situations (e.g. with knitr)

* Tweaked default `theme_grey()` background colour from grey90 to grey92:
  this makes the background recede into the background a little more.

* Bumped the default `size` for `geom_smooth()` up to 1. To continue to use
  the previous size, set `size = 0.5`. `geom_smooth()` gains explicit
  `method`, `se` and `formula` arguments to make it easier to see what the
  most important options are.

* `geom_jitter()` gains `width` and `height` arguments to make it easier
  to control the amount of jittering without using the lengthy
  `position_jitter()` function (#1116)

* ggplot2 now exports `alpha()` from the scales package. This means you
  don't need to do `library(scales)` or `scales::alpha()` to access that
  handy function (#1107).

* Improved documentation for `aes()` and many geoms.

* Fixes to pass `R CMD check --run-donttest` in R-devel.

ggplot2 1.0.0
----------------------------------------------------------------

NEW FEATURES

* New coordinate system for small scale maps. `coord_quickmap()` computes and
  sets the correct aspect ratio between one degree of latitude and one degree
  of longitude at the centre of the plotted region. It does not perform full
  fledged mapping projection as `coord_map()` does and therefore is much